# dialect

./: .gitattributes  .gitignore  README.md  pyproject.toml
bbs/: __init__.py
bbs/client/: __init__.py  main.py  protocol.py
bbs/plugins/: __init__.py  fortune.py
bbs/server/: __init__.py  ansi.py  app.py  auth.py  chat.py  db.py  files.py  forums.py  plugins.py  presence.py  protocol.py  sessions.py
bbs/themes/: __init__.py
bbs/themes/default/: __init__.py  login.ans  motd.ans
docs/: pre_design_doc.md  pre_design_doc_decisions.md
tasks/: done.md  todo.md
tests/: __init__.py  test_scaffold.py
